--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "bootstrap": "^5.0.2",
     "next": "11.0.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
+    "reactstrap": "^8.9.0",
     "sass": "^1.35.2"
   },
   "devDependencies": {
