--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "next": "11.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-js-pagination": "^3.0.3",
+    "react-toastify": "^7.0.4",
     "reactstrap": "^8.9.0",
-    "sass": "^1.35.2"
+    "sass": "^1.35.2",
+    "webpack": "^5.47.0"
   },
   "devDependencies": {
     "@types/node": "^16.4.0",
