--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "dayjs": "^1.10.6",
+    "file-saver": "^2.0.5",
     "next": "11.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
@@ -21,7 +22,8 @@
     "react-toastify": "^7.0.4",
     "reactstrap": "^8.9.0",
     "sass": "^1.35.2",
-    "webpack": "^5.47.0"
+    "webpack": "^5.47.0",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@types/node": "^16.4.0",
